--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="css/styles.css">
 
+   <!-- Favicon -->
+   <link rel="icon" href="css/favicon.ico">
+
    <!-- Font Awesome  -->
    <script src="https://kit.fontawesome.com/c87b9022ab.js"></script>
 
