--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    <title>TinDog</title>
 
    <!-- Google Fonts -->
@@ -177,8 +178,6 @@
             </div>
          </div>
       </div>
-
-
    </section>
 
 
@@ -195,11 +194,10 @@
 
    <!-- Footer -->
    <footer id="footer">
-
       <div class="container-fluid">
-         <i class="footer-icon fab fa-twitter"></i>
-         <i class="footer-icon fab fa-facebook-f"></i>
-         <i class="footer-icon fab fa-instagram"></i>
+         <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"><i class="footer-icon fab fa-twitter"></i></a>
+         <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="footer-icon fab fa-facebook-f"></i></a>
+         <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"><i class="footer-icon fab fa-instagram"></i></a>
          <i class="footer-icon fas fa-envelope"></i>
          <p>© Copyright 2018 TinDog</p>
       </div>
