--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+   <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    <title>TinDog</title>
 
    <!-- Google Fonts -->
