Improve mobile design

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
          <div class="pricing-column col-lg-4 col-md-6">
             <div class="card">
                <div class="card-header">
-                  <h3>Chihuahua</h3>
+                  <h3 class="pricing-plan">Chihuahua</h3>
                </div>
                <div class="card-body">
                   <h2 class="price-text">Free</h2>
@@ -150,7 +150,7 @@
          <div class="pricing-column col-lg-4 col-md-6">
             <div class="card">
                <div class="card-header">
-                  <h3>Labrador</h3>
+                  <h3 class="pricing-plan">Labrador</h3>
                </div>
                <div class="card-body">
                   <h2 class="price-text">$49 / mo</h2>
@@ -164,7 +164,7 @@
          <div class="pricing-column col-lg-4">
             <div class="card">
                <div class="card-header">
-                  <h3>Mastiff</h3>
+                  <h3 class="pricing-plan">Mastiff</h3>
                </div>
                <div class="card-body">
                   <h2 class="price-text">$99 / mo</h2>
